roles/deploy_app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: system-info-app
spec:
  type: NodePort
  selector:
    app: system-info-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
