roles/deploy_app/templates/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: system-info-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: intern-service.norafith.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: system-info-app
            port:
              number: 80
